syntax = "proto3";

package proto;

message RecognizeRequest {
    string url = 1;
}

message Face {
  int32 x = 1;
  int32 y = 2;
  int32 width = 3;
  int32 height = 4;
  repeated float encoding = 5;
}

message RegognizeResponse {
  repeated Face faces = 1;
}


service FaceRecognizer {
    rpc RecognizeFaces(RecognizeRequest) returns (RegognizeResponse);
}
